--- a/css/styles.css
+++ b/css/styles.css
@@ -5096,6 +5096,10 @@ textarea.form-control-lg {
   border-radius: 0.25rem;
 }
 
+.list-group:hover {
+  color:#f8f9fa;
+}
+
 .list-group-numbered {
   list-style-type: none;
   counter-reset: section;
@@ -5111,10 +5115,10 @@ textarea.form-control-lg {
   text-align: inherit;
 }
 .list-group-item-action:hover, .list-group-item-action:focus {
-  z-index: 1;
+  z-index: 2;
   color: #f8f9fa!important;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: #343a40!important;
 }
 .list-group-item-action:active {
   color: #f8f9fa!important;
@@ -11364,7 +11368,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   }
 
   .header-text {
-    font-family: "Yanone";
+    font-family: "Yanone"!important;
     font-size: 18px!important;
     display: flex;
     flex-wrap: nowrap;
@@ -11372,11 +11376,13 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   }
 
   .header-text a:link, .header-text a:visited {
+    font-family: "Yanone"!important;
     color: #fff;
     text-decoration: none;
   }
 
   .header-text a:hover {
+    font-family: "Yanone"!important;
     color: #fff;
     text-decoration: underline;
   }
@@ -11397,15 +11403,17 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 10px;
+    font-family: "Yanone"!important;
   }
 
   .poc-text {
+    font-family: "Yanone"!important;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     padding-left: 5px;
     padding-top: 5px;
-    font-family: "Yanone";
+    
     font-size: 17px;
     float: left;
     background-color: var(--bs-gray-800);
@@ -11417,6 +11425,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   }
 
   .poc-text a:hover {
+    font-family: "Yanone"!important;
     text-decoration: underline;
     color: #fff;
   }
@@ -11427,7 +11436,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     justify-content: flex-end;
     padding-right: 5px;
     padding-top: 5px;
-    font-family: "Yanone";
+    font-family: "Yanone"!important;
     font-size: 17px;
     text-align: right;
     background-color: var(--bs-gray-800);
